# aliyun-log-c-sdk

./: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  README.md  aliyun-log-c-sdk.sln  inner_interface.md  performance.md  save_send_buffer.md
aliyun-log-c-sdk/: aliyun-log-c-sdk.vcxproj  aliyun-log-c-sdk.vcxproj.filters
producer_sample/: producer_sample.vcxproj  producer_sample.vcxproj.filters
projects/android/jni/: Android.mk
projects/iOS/aliyun_log_c_sdk.xcodeproj/: project.pbxproj
projects/iOS/aliyun_log_c_sdk.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/linux/: CMakeLists.txt
projects/mac/: CMakeLists.txt
projects/windows/: CMakeLists.txt
projects/windows/aliyun_log_c_sdk/: ReadMe.txt  aliyun_log_c_sdk.sln  aliyun_log_c_sdk.vcxproj  log_post_logs_sample.c
projects/windows/sample/: unittest.c
sample/: CMakeLists.txt  hmac-sha.h  log_config.c  log_config.h  log_post_logs_sample.c  log_producer_benchmark.c  log_producer_persistent_sample.c  log_producer_sample.c  log_util_imp.c  log_util_imp.h  producer_config.json  sha1.h  video_frame_producer_sample.c
scripts/: build-all.sh  build-android.sh  build-ios.sh  build-mac.sh  build-windows.ps1  build-windows.sh  pkg-windows.ps1
src/: aos_buf.c  aos_buf.h  aos_define.h  aos_fstack.c  aos_fstack.h  aos_http_io.c  aos_http_io.h  aos_list.h  aos_log.c  aos_log.h  aos_status.c  aos_status.h  aos_string.c  aos_string.h  aos_transport.c  aos_transport.h  aos_util.c  aos_util.h  cJSON.c  hmac-sha.c  http_interface.c  http_interface.h  inner_log.c  inner_log.h  log_api.c  log_api.h  log_auth.c  log_auth.h  log_builder.c  log_builder.h  log_define.c  log_define.h  log_http_cont.c  log_http_cont.h  log_http_interface.c  log_http_interface.h  log_inner_include.h  log_logstores.pb-c.c  log_logstores.pb-c.h  log_multi_thread.h  (+37 more)
src/curl_adapter/: adapter.c  adapter.h
